Fix layout issues in NotFound.css by adjusting positioning and margin

--- a/CampusJobReact/src/Common/NotFound/Style/NotFound.css
+++ b/CampusJobReact/src/Common/NotFound/Style/NotFound.css
@@ -20,6 +20,7 @@
     position:absolute;
     width: 100%;  
     top:0;
+    left: 0;
     width: 100%;
     height: 100%; /* Asegura que ocupe toda la pantalla */
     display: flex;
@@ -35,7 +36,7 @@
     flex-direction: column;
     color: #00FFED;
     font-size: 5em; /* Ajusta el tamaño según lo que necesites */
-    margin-left: 2em;
+    margin-left: 0em;
   }
   
   .TituloError404 {
